fixed gap with my work section and philosophy

--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@
 		
 			.main.style3 {
 				text-align: center;
-				padding: 0em 0 6em 0;
+				padding: 6em 0 6em 0;
 			}
 
 				.main.style3 .content {
@@ -593,6 +593,7 @@
 
 				.main.style3.primary {
 					background: #fff;
+					padding: 0em 0 0em 0;
 				}
 			
 				.main.style3.secondary {
